--- a/EVs_23_7/src/main/resources/templates/bookingslot.html
+++ b/EVs_23_7/src/main/resources/templates/bookingslot.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-       <h> successfully  data send to the database </h>
+       <h1>Booking Successfully completed .....</h1>
 </body>
 </html>
