--- a/EVs_23_7/src/main/resources/templates/Second duplicate.html
+++ b/EVs_23_7/src/main/resources/templates/Second duplicate.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Slot Booking Form</h2>>
+      <h2>Slot Booking Form</h2>
       <form id="bookingForm" action="bookingslot12" method="post" onsubmit="redirectToIndex()">
         <div class="form-group">
           <label for="country">Country:</label>
@@ -76,10 +76,7 @@
           <label for="name">Name:</label>
           <input type="text" id="name" name="userName" required />
         </div>
-        <div class="form-group">
-          <label for="otp">OTP:</label>
-          <input type="text" id="otp" name="otp" readonly required />
-        </div>
+        
         <button type="submit">Book Slot</button>
       </form>
     </div>
@@ -93,7 +90,7 @@
         const state = urlParams.get("state");
         const city = urlParams.get("city");
         const station = urlParams.get("station");
-        const otp = generateOTP();
+
         return { country, state, city, station, otp };
       }
 
@@ -115,7 +112,6 @@
         document.getElementById("city").value = urlParams.get("city");
         document.getElementById("station").value = urlParams.get("station");
         document.getElementById("slot").value = urlParams.get("slotId");
-        document.getElementById("otp").value = generateOTP();
       }
 
       // Function to submit form
@@ -129,10 +125,10 @@
       }
 
       // Function to generate a 6-digit OTP
-      function generateOTP() {
-        var otp = Math.floor(100000 + Math.random() * 900000);
-        return otp;
-      }
+	  //function generateOTP() {
+		//  var otp = Math.floor(100000 + Math.random() * 900000);
+		//  return otp;
+	// }
 
       // Function to send OTP and form data to email
       function sendEmail(email, otp) {
@@ -148,7 +144,7 @@
       };
 	  function redirectToIndex() {
 	     // Redirect to index.html page
-	     window.location.href = "http://localhost:9090/slot5/gettable";
+	     window.location.href = "http://localhost:9090/new";
 	   }
     </script>
   </body>
