--- a/EVs_23_7/src/main/resources/templates/dynamic_slot_display.html
+++ b/EVs_23_7/src/main/resources/templates/dynamic_slot_display.html
@@ -51,7 +51,7 @@
 
 
 
-		// Fetch slot data from backend
+		<!-- -->// Fetch slot data from backend
 		fetch('/localhost:9090/slot5/gettable')
 			.then(response => response.json())
 			.then(data => {
